fixed nav top bar link vertical spacing

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -110,6 +110,7 @@ align-items: center;
   display: inline-flex;
 		float:right;
   text-align: center;
+    margin-top: 10px;
   padding: 14px 20px;
   text-decoration: none;
 	text-transform: capitalize;
